# startq

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH_POST.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
startq/: __init__.py  brain.py  cli.py
tests/: test_brain.py  test_init.py
